--- a/UniversityStudentDiaryManagementSystem/frmUpdatePassword.resx
+++ b/UniversityStudentDiaryManagementSystem/frmUpdatePassword.resx
@@ -117,4 +117,41 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAM4AAADOAZT+k6AAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABLklEQVRIS6WVMW7CMBRALdHCRbp1RHZWFGfpAXIY2Npj0E6lVVUBaruUnooBp+po/o/yKxNZzs/3
+        kyyBg98jwRbq15pVU5mjK4u1XyyuVCboQBc6G1ssMeAaa3w7SvOeE8G16Pj3WXNSUNkEE+JIRO7hLp6V
+        r2+nzpqP8ALc1dbP59fd2kF8XU9A/ho64It/+7ubWfcBeWRQTkgibDkxJjJaTnAiYjmRimTLiXhE75pS
+        v4VzIjkRi1yODDnRRT77cnhkh2w50j5z238sEKj0nnNOksR/0CDCPIxRovLK/LhKf4VzokhqK3LOSRLO
+        PhdHOHJidGSMnGBHJHJiMJIjJ5IRePMUXsBtiAu6tWzaSG8LQ/Tx4k9fKicikZNytniAF38wXnLkBDrQ
+        hU5n9f0ZKdhb3ffMrzUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnChangePassword.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAD90lEQVRIS51Ub0wbZRhvjIlfjGbqJ5Mluo/ohA2ZOj9sH2iTZVmQZaV0a68cV64EU7ZkLjPDJbAp
+        m7gZF8lISiaBlE354hfxg3/GoKxSOiDpcJ22d/T/9d/dlf6RoY7H9z2OOuixsv2SX957nnue3y/P815O
+        pQRjvfFNQkvUk43kXrPJXE030TvbtG3Py6+fHkcbDGcaDx8rkPpmoAl6I/9pIVpG28i27XL5k8FwhDit
+        /aARKINZSfxRhmmaflFu2zp0h/VLhgYCCzxEHLKYLJ9YCMtpTNpAf9akJ72Ikgl61yW3bQ0kSW4/UqcD
+        eTXfyul1oLTUS9q6xhXZ5CbOeYkPX4bOzmekgsfBqCf3YYPmYxRu7pHTJWio1y8bdSZccxfHDHX8B2Yr
+        6zLpTBpsQCEDi9HSLadLYGwwHiJ0xIEWU8sbC00nXkMGF32ktYJttmrkEmXgxlUD8xPtFwsz5vY+H2Xd
+        JaeUcVRn1EoGBmlFZ8F34LlM8OC2RwlQumuWOq5FPP8HffIVOVWK1Kz61ZhjD5eYfh+yPjXkmbIsFBiN
+        P+evteJ+PIXP3F4niSlBcNfMpyerUGPtRqHyZNWP3z2G4Nz1tzBVrSxQlrVfyjKbg79d+VCYfluhuTxz
+        fo1NltkcyGBFnK5RFChLv3pIltkcacdbINx5aoPvZJnNkZ7EBntKmnPMQRDYs8CzXyB+DamFPkgF+hGv
+        IdoRRyAZ+HEhFor1RcPRzzHDC+EuxI8jwcgJdO5fNXBUgujeOIEGuOBvIKZTkMvkICeuMp/JQz6rwMV8
+        sQYzK2YhHU9nkHk3mqBqZeMlZxkjpDk/LP+1DJ47HkhySekZ0+10g8iLxdg57oRCtlCMx38ZLz6jqf5E
+        l1z1r+Bab5BhrSAmo2D/xg5Xeq7AoG0Qxn4egwHbAFzqvgT2a3ZwTjihv7cfLnRegOGBYZiZmgFbrw26
+        znTB9cHrcP/3+xALxwIqwbVb5Kd2rzMQ2JNoPXFwTbqgtakVTrWfgkggIpmgfxV0fNQByVgSRr8fxb8W
+        ONdxDtKJNIwMj0hxz/keWOQXIRaJhVWZ2Xdb8aea8+7/fwKmFYR4CBw3HXBj6IZ0emY80vh4CtdtF9zz
+        3INbP92Cq19dhTn3HHjvemHi1wm4fPEyzM/NQ5AJ4glY6aL52XcqsnPvdRf8agvmIkt9mogGsniPXJiT
+        Lndtr3iSpdxSMQ6xIXhQeFCMsTA+cS4ais5LBkpAF9TLRbgoumDMVDKejKM1cHyCT6FT5FM8L6QEHsUi
+        iqV3qCaBahNofRHUH44Go2pZThk+n++FYDC4Y40RNlKJzmrMEBOqWXuWWYEo1QUCgddhDJ5VqVSq/wDF
+        yFlvcGUkQQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
