--- a/UniversityStudentDiaryManagementSystem/frmCreateAccount.resx
+++ b/UniversityStudentDiaryManagementSystem/frmCreateAccount.resx
@@ -120,34 +120,34 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnCreateAccount.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAKUAAAClAXDE3lUAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADEUlEQVRIS5XTTUyScRwH8Md8DTQRRRAtiRAjt2zVWmud6thc89Kx1aFDl+apdelQ5zro6oCWGLRw
-        UOHLfEsSmCxBUR7Sh/kyX9B8w0QnlknOf79/Sf31+Ut4+DD5/r6/37M9TAYhFNPpBb1Qs6a9rwlr32nW
-        qqdOhbXjmnCNSbNeU6FCVam0HRI1jDq5VntJvVo7Vrxai3Zsggjx3V+8+vI8bTeKGmKq5dcX1V/1WwAB
-        nXrRUHoOaZNVY1WpqiXDWfWSvn5nFikK6s7QbmDUUD7XLFAtGEcBKpo33qJ1MNVi/d3fnQWjDz+c1uEF
-        mHLOXKGcNaMTX97qaXOSctZkwV1wmzbnBZhiqsGoCFjQ8RnLBdqcdCxguYq7hYGGatqcF2CF480jYKtg
-        xnSYNicpJi0i6G4DljbnBdjR0TYP2M4ZbsygzUmysVYJdBFw0+a8AMvnrE/y/VYk5zov0+akfH/nNdwt
-        8Fuf0ea8AJMP2cvyBu0ItNDmUfCRAB0H7soGHTf26fBDuccjyPM6WZnXiaQDzgcQJuzt4EzGOh/hDnDQ
-        Ojs9fojleDx5uX2uKYBy+3qs0t6eMklvr0zschXkut3lkDv/zFxhSf8nFe0GRg2jst39V3Jc/Wh/AzZp
-        X5+SthtFDUU9XoW421ctdvo2ASKsg25x9+en2d1sOZSpr4XEC7LsQ2VZdm4VIBAS27lKkcN/U9zFlTAm
-        lLi3HyWycS+yHJxdYuPSyXxX6UjX6L3MjyPbAGV2jbTlfBiWk/NYYIfFeyLbpIjM//4hbJ8ozeiYiKR3
-        THzLaJ+4Q5biAbssoD+AsaEkYWvAK2ydRoLWmQMfx4Qt0yzeF1koDxA0zj8UNM0h0EYOYxE0zT6HPkvY
-        APjGIJGxjNAUlKW9D0ZASNC4FPc7T7ME22EH/Q+TYl65nmIOoWTzciXt0H4YLUpmdJNpUXDDh+8I3yxK
-        yZxJMoYfA5RYv36TdihecIPFdxjdyu7fINGw0QJQSt1mCTk4qEOG7yy+w3tAwqvIVELdz1Csf6J4wA03
-        +AGvLvNfjphfJxQlNbl26DsAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        pQAAAKUBcMTeVQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMRSURBVEhLldNN
+        TJJxHAfwx3wNNBFFEC2JECO3bNVaa53q2Fzz0rHVoUOX5ql16VDnOujqgJYYtHBQ4ct8SxKYLEFRHtKH
+        +TJf0HzDRCeWSc5/v39J/fX5S3j4MPn+vr/fsz1MBiEU0+kFvVCzpr2vCWvfadaqp06FteOacI1Js15T
+        oUJVqbQdEjWMOrlWe0m9WjtWvFqLdmyCCPHdX7z68jxtN4oaYqrl1xfVX/VbAAGdetFQeg5pk1VjVamq
+        JcNZ9ZK+fmcWKQrqztBuYNRQPtcsUC0YRwEqmjfeonUw1WL93d+dBaMPP5zW4QWYcs5coZw1oxNf3upp
+        c5Jy1mTBXXCbNucFmGKqwagIWNDxGcsF2px0LGC5iruFgYZq2pwXYIXjzSNgq2DGdJg2JykmLSLobgOW
+        NucF2NHRNg/YzhluzKDNSbKxVgl0EXDT5rwAy+esT/L9ViTnOi/T5qR8f+c13C3wW5/R5rwAkw/Zy/IG
+        7Qi00OZR8JEAHQfuygYdN/bp8EO5xyPI8zpZmdeJpAPOBxAm7O3gTMY6H+EOcNA6Oz1+iOV4PHm5fa4p
+        gHL7eqzS3p4ySW+vTOxyFeS63eWQO//MXGFJ/ycV7QZGDaOy3f1Xclz9aH8DNmlfn5K2G0UNRT1ehbjb
+        Vy12+jYBIqyDbnH356fZ3Ww5lKmvhcQLsuxDZVl2bhUgEBLbuUqRw39T3MWVMCaUuLcfJbJxL7IcnF1i
+        49LJfFfpSNfovcyPI9sAZXaNtOV8GJaT81hgh8V7ItukiMz//iFsnyjN6JiIpHdMfMton7hDluIBuyyg
+        P4CxoSRha8ArbJ1GgtaZAx/HhC3TLN4XWSgPEDTOPxQ0zSHQRg5jETTNPoc+S9gA+MYgkbGM0BSUpb0P
+        RkBI0LgU9ztPswTbYQf9D5NiXrmeYg6hZPNyJe3QfhgtSmZ0k2lRcMOH7wjfLErJnEkyhh8DlFi/fpN2
+        KF5wg8V3GN3K7t8g0bDRAlBK3WYJOTioQ4bvLL7De0DCq8hUQt3PUKx/onjADTf4Aa8u81+OmF8nFCU1
+        uXboOwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAM4AAADOAZT+k6AAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAABLklEQVRIS6WVMW7CMBRALdHCRbp1RHZWFGfpAXIY2Npj0E6lVVUBaruUnooBp+po/o/yKxNZzs/3
-        kyyBg98jwRbq15pVU5mjK4u1XyyuVCboQBc6G1ssMeAaa3w7SvOeE8G16Pj3WXNSUNkEE+JIRO7hLp6V
-        r2+nzpqP8ALc1dbP59fd2kF8XU9A/ho64It/+7ubWfcBeWRQTkgibDkxJjJaTnAiYjmRimTLiXhE75pS
-        v4VzIjkRi1yODDnRRT77cnhkh2w50j5z238sEKj0nnNOksR/0CDCPIxRovLK/LhKf4VzokhqK3LOSRLO
-        PhdHOHJidGSMnGBHJHJiMJIjJ5IRePMUXsBtiAu6tWzaSG8LQ/Tx4k9fKicikZNytniAF38wXnLkBDrQ
-        hU5n9f0ZKdhb3ffMrzUAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        zgAAAM4BlP6ToAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEuSURBVEhLpZUx
+        bsIwFEAt0cJFunVEdlYUZ+kBchjY2mPQTqVVVQFqu5SeigGn6mj+j/IrE1nOz/eTLIGD3yPBFurXmlVT
+        maMri7VfLK5UJuhAFzobWywx4BprfDtK854TwbXo+PdZc1JQ2QQT4khE7uEunpWvb6fOmo/wAtzV1s/n
+        193aQXxdT0D+Gjrgi3/7u5tZ9wF5ZFBOSCJsOTEmMlpOcCJiOZGKZMuJeETvmlK/hXMiORGLXI4MOdFF
+        PvtyeGSHbDnSPnPbfywQqPSec06SxH/QIMI8jFGi8sr8uEp/hXOiSGorcs5JEs4+F0c4cmJ0ZIycYEck
+        cmIwkiMnkhF48xRewG2IC7q1bNpIbwtD9PHiT18qJyKRk3K2eIAXfzBecuQEOtCFTmf1/Rkp2Fvd98yv
+        NQAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
