--- a/UniversityStudentDiaryManagementSystem/Forms/frmHelpingMaterial.resx
+++ b/UniversityStudentDiaryManagementSystem/Forms/frmHelpingMaterial.resx
@@ -130,7 +130,7 @@
         NQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnSaveImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
         pQAAAKUBcMTeVQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFTSURBVEhL3da9
