add constrain on the the input fields

--- a/UniversityStudentDiaryManagementSystem/Forms/frmUpdatePassword.resx
+++ b/UniversityStudentDiaryManagementSystem/Forms/frmUpdatePassword.resx
@@ -118,40 +118,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAM4AAADOAZT+k6AAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAABLklEQVRIS6WVMW7CMBRALdHCRbp1RHZWFGfpAXIY2Npj0E6lVVUBaruUnooBp+po/o/yKxNZzs/3
-        kyyBg98jwRbq15pVU5mjK4u1XyyuVCboQBc6G1ssMeAaa3w7SvOeE8G16Pj3WXNSUNkEE+JIRO7hLp6V
-        r2+nzpqP8ALc1dbP59fd2kF8XU9A/ho64It/+7ubWfcBeWRQTkgibDkxJjJaTnAiYjmRimTLiXhE75pS
-        v4VzIjkRi1yODDnRRT77cnhkh2w50j5z238sEKj0nnNOksR/0CDCPIxRovLK/LhKf4VzokhqK3LOSRLO
-        PhdHOHJidGSMnGBHJHJiMJIjJ5IRePMUXsBtiAu6tWzaSG8LQ/Tx4k9fKicikZNytniAF38wXnLkBDrQ
-        hU5n9f0ZKdhb3ffMrzUAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        zgAAAM4BlP6ToAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEuSURBVEhLpZUx
+        bsIwFEAt0cJFunVEdlYUZ+kBchjY2mPQTqVVVQFqu5SeigGn6mj+j/IrE1nOz/eTLIGD3yPBFurXmlVT
+        maMri7VfLK5UJuhAFzobWywx4BprfDtK854TwbXo+PdZc1JQ2QQT4khE7uEunpWvb6fOmo/wAtzV1s/n
+        193aQXxdT0D+Gjrgi3/7u5tZ9wF5ZFBOSCJsOTEmMlpOcCJiOZGKZMuJeETvmlK/hXMiORGLXI4MOdFF
+        PvtyeGSHbDnSPnPbfywQqPSec06SxH/QIMI8jFGi8sr8uEp/hXOiSGorcs5JEs4+F0c4cmJ0ZIycYEck
+        cmIwkiMnkhF48xRewG2IC7q1bNpIbwtD9PHiT18qJyKRk3K2eIAXfzBecuQEOtCFTmf1/Rkp2Fvd98yv
+        NQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnChangePassword.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAD90lEQVRIS51Ub0wbZRhvjIlfjGbqJ5Mluo/ohA2ZOj9sH2iTZVmQZaV0a68cV64EU7ZkLjPDJbAp
-        m7gZF8lISiaBlE354hfxg3/GoKxSOiDpcJ22d/T/9d/dlf6RoY7H9z2OOuixsv2SX957nnue3y/P815O
-        pQRjvfFNQkvUk43kXrPJXE030TvbtG3Py6+fHkcbDGcaDx8rkPpmoAl6I/9pIVpG28i27XL5k8FwhDit
-        /aARKINZSfxRhmmaflFu2zp0h/VLhgYCCzxEHLKYLJ9YCMtpTNpAf9akJ72Ikgl61yW3bQ0kSW4/UqcD
-        eTXfyul1oLTUS9q6xhXZ5CbOeYkPX4bOzmekgsfBqCf3YYPmYxRu7pHTJWio1y8bdSZccxfHDHX8B2Yr
-        6zLpTBpsQCEDi9HSLadLYGwwHiJ0xIEWU8sbC00nXkMGF32ktYJttmrkEmXgxlUD8xPtFwsz5vY+H2Xd
-        JaeUcVRn1EoGBmlFZ8F34LlM8OC2RwlQumuWOq5FPP8HffIVOVWK1Kz61ZhjD5eYfh+yPjXkmbIsFBiN
-        P+evteJ+PIXP3F4niSlBcNfMpyerUGPtRqHyZNWP3z2G4Nz1tzBVrSxQlrVfyjKbg79d+VCYfluhuTxz
-        fo1NltkcyGBFnK5RFChLv3pIltkcacdbINx5aoPvZJnNkZ7EBntKmnPMQRDYs8CzXyB+DamFPkgF+hGv
-        IdoRRyAZ+HEhFor1RcPRzzHDC+EuxI8jwcgJdO5fNXBUgujeOIEGuOBvIKZTkMvkICeuMp/JQz6rwMV8
-        sQYzK2YhHU9nkHk3mqBqZeMlZxkjpDk/LP+1DJ47HkhySekZ0+10g8iLxdg57oRCtlCMx38ZLz6jqf5E
-        l1z1r+Bab5BhrSAmo2D/xg5Xeq7AoG0Qxn4egwHbAFzqvgT2a3ZwTjihv7cfLnRegOGBYZiZmgFbrw26
-        znTB9cHrcP/3+xALxwIqwbVb5Kd2rzMQ2JNoPXFwTbqgtakVTrWfgkggIpmgfxV0fNQByVgSRr8fxb8W
-        ONdxDtKJNIwMj0hxz/keWOQXIRaJhVWZ2Xdb8aea8+7/fwKmFYR4CBw3HXBj6IZ0emY80vh4CtdtF9zz
-        3INbP92Cq19dhTn3HHjvemHi1wm4fPEyzM/NQ5AJ4glY6aL52XcqsnPvdRf8agvmIkt9mogGsniPXJiT
-        Lndtr3iSpdxSMQ6xIXhQeFCMsTA+cS4ais5LBkpAF9TLRbgoumDMVDKejKM1cHyCT6FT5FM8L6QEHsUi
-        iqV3qCaBahNofRHUH44Go2pZThk+n++FYDC4Y40RNlKJzmrMEBOqWXuWWYEo1QUCgddhDJ5VqVSq/wDF
-        yFlvcGUkQQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rwAAAK8BK7AVuQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAP3SURBVEhLnVRv
+        TBtlGG+MiV+MZuonkyW6j+iEDZk6P2wfaJNlWZBlpXRrrxxXrgRTtmQuM8MlsCmbuBkXyUhKJoGUTfni
+        F/GDf8agrFI6IOlwnbZ39P/1392V/pGhjsf3PY466LGy/ZJf3nuee57fL8/zXk6lBGO98U1CS9STjeRe
+        s8lcTTfRO9u0bc/Lr58eRxsMZxoPHyuQ+magCXoj/2khWkbbyLbtcvmTwXCEOK39oBEog1lJ/FGGaZp+
+        UW7bOnSH9UuGBgILPEQcspgsn1gIy2lM2kB/1qQnvYiSCXrXJbdtDSRJbj9SpwN5Nd/K6XWgtNRL2rrG
+        FdnkJs55iQ9fhs7OZ6SCx8GoJ/dhg+ZjFG7ukdMlaKjXLxt1JlxzF8cMdfwHZivrMulMGmxAIQOL0dIt
+        p0tgbDAeInTEgRZTyxsLTSdeQwYXfaS1gm22auQSZeDGVQPzE+0XCzPm9j4fZd0lp5RxVGfUSgYGaUVn
+        wXfguUzw4LZHCVC6a5Y6rkU8/wd98hU5VYrUrPrVmGMPl5h+H7I+NeSZsiwUGI0/56+14n48hc/cXieJ
+        KUFw18ynJ6tQY+1GofJk1Y/fPYbg3PW3MFWtLFCWtV/KMpuDv135UJh+W6G5PHN+jU2W2RzIYEWcrlEU
+        KEu/ekiW2Rxpx1sg3Hlqg+9kmc2RnsQGe0qac8xBENizwLNfIH4NqYU+SAX6Ea8h2hFHIBn4cSEWivVF
+        w9HPMcML4S7EjyPByAl07l81cFSC6N44gQa44G8gplOQy+QgJ64yn8lDPqvAxXyxBjMrZiEdT2eQeTea
+        oGpl4yVnGSOkOT8s/7UMnjseSHJJ6RnT7XSDyIvF2DnuhEK2UIzHfxkvPqOp/kSXXPWv4FpvkGGtICaj
+        YP/GDld6rsCgbRDGfh6DAdsAXOq+BPZrdnBOOKG/tx8udF6A4YFhmJmaAVuvDbrOdMH1wetw//f7EAvH
+        AirBtVvkp3avMxDYk2g9cXBNuqC1qRVOtZ+CSCAimaB/FXR81AHJWBJGvx/FvxY413EO0ok0jAyPSHHP
+        +R5Y5BchFomFVZnZd1vxp5rz7v9/AqYVhHgIHDcdcGPohnR6ZjzS+HgK120X3PPcg1s/3YKrX12FOfcc
+        eO96YeLXCbh88TLMz81DkAniCVjpovnZdyqyc+91F/xqC+YiS32aiAayeI9cmJMud22veJKl3FIxDrEh
+        eFB4UIyxMD5xLhqKzksGSkAX1MtFuCi6YMxUMp6MozVwfIJPoVPkUzwvpAQexSKKpXeoJoFqE2h9EdQf
+        jgajallOGT6f74VgMLhjjRE2UonOaswQE6pZe5ZZgSjVBQKB12EMnlWpVKr/AMXIWW9wZSRBAAAAAElF
+        TkSuQmCC
 </value>
   </data>
 </root>
