--- a/UniversityStudentDiaryManagementSystem/Forms/Student/frmMessage.resx
+++ b/UniversityStudentDiaryManagementSystem/Forms/Student/frmMessage.resx
@@ -118,24 +118,45 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnMarkAsDoneHostel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnConnect.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        qwAAAKsB1E2SqwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMuSURBVEhLrZVL
-        TBNRFIZHDCQujCa4UBdqXAAaNxh1q+JCxZgoWBAqoBFQQ1JMjGtcqZG40viIRjGyMmIwMeIrIijQ8lTo
-        g9IHfT+mifIo6NB2fu+dzpSBTouoN/nS3Hv+c/85Z27nMssZ8Jw8Ar/6sDj994H+2kwEKnaIU2KgPgBP
-        +X5xytAY1YjT5Q8YVFm8t/wNPKU5AJMB87ZCWPL2AVcy4D2Vy3vVbVQjyv9uAKqVsOYWwLhmFqMbwbuL
-        QEz7ECzfSmOiLP3QeZDTMc739rj5Hhs793A8NHdfDkzZszCsAu9R0c0FIp7q4cU6CUeIazT7sE7cnmG6
-        bNzzVxag3xMFEQiEgp8wEXgCn38IGFkBmLckNpdwhUKY8DeBDXYk8iScvmmNsDmKqxpNL3W8ZGAORgRs
-        wR9wswGZwWbw+t2EPfMGLCtoqDaRx8YNJpte/EKN5jiDwrKYsVULatDljCXodsUSYl6/CdBnAdr1hA1k
-        8zJwpstCjGqoVsr75ot3YfLxc6Cm3svgYAmMrbqUBj7WAH+glxisJiWuBT+yExFLLbzBMSG2hAEWGPS5
-        ozAFIgKjBEdoGmH/TfIbxpyxABjIBG/Mh8/6SBabFrRSnjUotkjJ4At5gk5HnM8EqUWU7c9i2NvCoe71
-        FOrbwol1qqFaKe+rN00FtESteyF6X0RIONESRn4zh5LmEK61xw1G/JEk/fBSLTKSMuVYxSruDHLIvvsT
-        u57OoMnAC2s0lkqvaEBLbXfwSdDjR5PGWU7QfbDH15S0g+la1E1aRKtQQngfkoGNV9RQaNtSGvS6okLP
-        kyBJ9kUV0DUl7ZhYrXKLZKdITuJEiQbviYH85MgZStsi8odRKruPfEJssgqoAV1T0tLKUhroqEChbNpX
-        u/wdEAO6pqSVDoSiwYDsa6qIzEAxLmPe4FApQg238NYSRZedg8M1AWcK2I/96NRP4Z01BotzSlFDcVuC
-        4BpuUIMZBscqzLQKVF4QHP8r1ZoHDFSqLHIn3EZRVQcqz98jgeuKVJwzofQscKaOJmuT4gvQXEX1xTKy
-        959dqXSg+HQejqq/kwfxo/bS/HWYdjDMb9Q7Q87PSKJrAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADbUlEQVRIS42U30uTURjHnyFZN+GVUJf9/BfSbHOZF23qps53OFASpNoUN9MugoKk/FF5FUF0EyWj
+        XSiZU1OoC3ObSgam7lcgOCnIBRVGQWnO0/Mcz/tu7+bML3zZznOe9/Oc95znvPA/xSKRgtiHsFkMFbEw
+        HEc/RC+zEKyjv6BH0BUiZW9ajoa7YtFwnDGmESFgQWgUUJbF/ew15In03RWLRouxQGJpaSmfxvjwlTRY
+        pl+hn8MnDkjVSiRixO2wi6GiWDh8iH5xO9oyYEEI4u8D9BA6weFPhF/CbQ6QRXBcLcNfpwgp2hEehl7W
+        DzkiBdgEbt1TjMsFBiAuppIiOBa5LIZcCGrJgIegR0yrhNBVpYAbEiKcXbgFeiywqYIHoVtMZ4gNwrxS
+        oA+YCGfXVlDzds/wfshlHvitFPDABu/z7VaMFos8rnJ7q95+vX4uFT49fIwZHa7Z883OcyJNJTYEMwqc
+        PAgh2nMz9Tm1otwtZQ5nC4I2b94xJVeOvtFTSQXIm6V1F3o5VYh5wa+C02GPw/ZC6BLJfW6wu9oFhHXc
+        TSvQXcXjZ211rMBgYDqrrZ0/PwQBFZw8DG6aU8noaG2T4eTGaw2qAn7vCQVOLjKZf2WsnOyFcYFMqqzJ
+        eTUVTi5zuLri0wc/K0XwEnk6jygFyH/dmnT4iEAmhXt+KR1usDs7aQ5btCQR0mzJN3TNvU9V4Jt7fxL+
+        AsbomTmfL1/5dhmb204icCOtgOqKszdwT4asuXNVBb7jmB/oCAxQbsTnO7w45UssTk3GFwKTJjA2uR6p
+        4E2unW/oGLSvP8vZ7Lt1VFVgzZP7A+daRBrX4rSvODjl61rw+0/Rwa6kFHgvSZLybUmXziIFUuFF5sqf
+        Yiq7EJrcnibXfRHOkK5amk6FFxiNrMRmU618Rxkcrq9yAfzvFWGVdBbrjAqOLpasfM9lBQM+e3DKn/EV
+        pjcYVd7A4UqU1DdcFFOgb2g4gNvyLh2uk2ozFkJwPFxGhURoW9jrJrkAXaJCBBRVVsW1lpoFvEh/ssHD
+        sxP8s5Iqgi8GAgYxTKrM7hxIvaHZrK2RRimf+py3InYLB/xPpZKUp62q/rgTlBsPVGetfSzSsemZhvqc
+        WlGE9ia9tbZDW2VZLSwvTxD0dIVpXWuR5vWS7YxIUYRvYOZ9vqsA/gHVlyXMqUql9QAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="btnSend.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAACwElEQVRIS7WVS0hUURjHjz3HAsmF4aaIIuhFmxYRtDR6bIqi2rTohVkUtQisTY0zYhER6LhKyCgo
+        MCLSq70hK4S0JBCd1Jm5TkMPMQrUSJ255993bt+Mc69nxkHqDz+Ye885v+/ce865I/5XvP0oONyFfXz5
+        b+KNYrnPROmZIJ5tbJOREz14zU0zi9eExx9GCXHZF0HwQggoaZdjBU+sX6eCgD+CK9w195B0mZolDW4g
+        hgn4wsCeTokFj60JIs5yVJrYycMypwGYXRnGZjVLv4l3NFCqwUkOdUkUP7ekMCwsfGTJpFz184awmDXO
+        VPWjqDKCvdTpFvGTBzg4/RFY90pCiVmONDnolfWyjh4bmOULYQPNsJwa3xBWsqOb833ApjaJWSxOyk+m
+        yW1M3LDlVKmabgw5GjV46T3v6JDwtEyKM8r/csQuQD9aXQ0OaALY/0Gi8KlTPI0cVVGssQvU9GM+LWK9
+        rtOxbmDpi6liRT7Jj/dMHcN8B5BnF0iGt15cdTjbSwvYKkdFk17uyS5XT93IWmdoYbatbZVv85qtCZ1Y
+        oWZOJ1QrTkGbhZWaGIkOnVihZl5Gr00rTUOdG7ZpYlgBt1gxt8WaUGuiE7oYvxZDPts0MRIH3HLa8yOl
+        3c4TnIU2NmVIE1a6C6wwRt9XhKW9AXLgKpsyRG0vwxpKFWhMjIlADEtuf0N5MKETOjGxi01Z0iRbUgXu
+        jkDUfLIpqPuMss5xvZihr20xW7Kk2bqYKlA3mCqgmFMbw8H232GdnOhjwzQx4ltt+cN4QgQm5czLeYEv
+        q2grniOh+6N4kw3T5AEWUQEp7gxbaeIfojpaaq8Rp2IA20ma+pzTCT7KTTmkMRER15OvJ9Ygar4WcYsj
+        /gGsJnmfXYR+8+0ccn/sHu2ekKiNbuE7GXMpikL6x9vNlzmmbnC9qDc9fDXDCPEHLAocu5b0wcQAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -148,26 +169,6 @@
         PvtyeGSHbDnSPnPbfywQqPSec06SxH/QIMI8jFGi8sr8uEp/hXOiSGorcs5JEs4+F0c4cmJ0ZIycYEck
         cmIwkiMnkhF48xRewG2IC7q1bNpIbwtD9PHiT18qJyKRk3K2eIAXfzBecuQEOtCFTmf1/Rkp2Fvd98yv
         NQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnMarkAsDone.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMuSURBVEhLrZVL
-        TBNRFIZHDCQujCa4UBdqXAAaNxh1q+JCxZgoWBAqoBFQQ1JMjGtcqZG40viIRjGyMmIwMeIrIijQ8lTo
-        g9IHfT+mifIo6NB2fu+dzpSBTouoN/nS3Hv+c/85Z27nMssZ8Jw8Ar/6sDj994H+2kwEKnaIU2KgPgBP
-        +X5xytAY1YjT5Q8YVFm8t/wNPKU5AJMB87ZCWPL2AVcy4D2Vy3vVbVQjyv9uAKqVsOYWwLhmFqMbwbuL
-        QEz7ECzfSmOiLP3QeZDTMc739rj5Hhs793A8NHdfDkzZszCsAu9R0c0FIp7q4cU6CUeIazT7sE7cnmG6
-        bNzzVxag3xMFEQiEgp8wEXgCn38IGFkBmLckNpdwhUKY8DeBDXYk8iScvmmNsDmKqxpNL3W8ZGAORgRs
-        wR9wswGZwWbw+t2EPfMGLCtoqDaRx8YNJpte/EKN5jiDwrKYsVULatDljCXodsUSYl6/CdBnAdr1hA1k
-        8zJwpstCjGqoVsr75ot3YfLxc6Cm3svgYAmMrbqUBj7WAH+glxisJiWuBT+yExFLLbzBMSG2hAEWGPS5
-        ozAFIgKjBEdoGmH/TfIbxpyxABjIBG/Mh8/6SBabFrRSnjUotkjJ4At5gk5HnM8EqUWU7c9i2NvCoe71
-        FOrbwol1qqFaKe+rN00FtESteyF6X0RIONESRn4zh5LmEK61xw1G/JEk/fBSLTKSMuVYxSruDHLIvvsT
-        u57OoMnAC2s0lkqvaEBLbXfwSdDjR5PGWU7QfbDH15S0g+la1E1aRKtQQngfkoGNV9RQaNtSGvS6okLP
-        kyBJ9kUV0DUl7ZhYrXKLZKdITuJEiQbviYH85MgZStsi8odRKruPfEJssgqoAV1T0tLKUhroqEChbNpX
-        u/wdEAO6pqSVDoSiwYDsa6qIzEAxLmPe4FApQg238NYSRZedg8M1AWcK2I/96NRP4Z01BotzSlFDcVuC
-        4BpuUIMZBscqzLQKVF4QHP8r1ZoHDFSqLHIn3EZRVQcqz98jgeuKVJwzofQscKaOJmuT4gvQXEX1xTKy
-        959dqXSg+HQejqq/kwfxo/bS/HWYdjDMb9Q7Q87PSKJrAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
